yamtrack/manifests/yamtrack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamtrack
  namespace: yamtrack
  labels:
    app.kubernetes.io/name: yamtrack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: yamtrack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yamtrack
    spec:
      containers:
        - name: yamtrack
          image: ghcr.io/fuzzygrim/yamtrack:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 1Gi

          volumeMounts:
            - name: data
              mountPath: /yamtrack/db

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: yamtrack-data
---
apiVersion: v1
kind: Service
metadata:
  name: yamtrack
  namespace: yamtrack
  labels:
    app.kubernetes.io/name: yamtrack
spec:
  selector:
    app.kubernetes.io/name: yamtrack
  ports:
    - name: http
      port: 8000
      targetPort: http
