yamtrack/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yamtrack
  namespace: yamtrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/name: Yamtrack
    gethomepage.dev/description: Watchlist
    gethomepage.dev/icon: yamtrack.png
    gethomepage.dev/href: https://yamtrack.k8s.internal.smigorx.eu
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  rules:
    - host: yamtrack.k8s.internal.smigorx.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yamtrack
                port:
                  name: http
  tls:
    - hosts:
        - yamtrack.k8s.internal.smigorx.eu
      secretName: yamtrack-tls
